--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^10.0.6",
+    "react-window": "^1.8.10",
     "socket.io-client": "^4.4.0",
     "three": "^0.170.0",
     "web-vitals": "^1.0.1"
