--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,10 @@ services:
     container_name: frontend_service
     build:
       context: ./frontend/my-react-app
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.dev # I need to chnag this to .frontend for production
     ports:
       - "3000:3000"
-    volumes:
+    volumes: # I need to delete this for production
       - ./frontend/my-react-app:/app
       - /app/node_modules
     networks:
