--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# Define the user that Nginx runs as (www-data is common)
+# Define the user
 user www-data;
 
 # Automatically adjust based on available CPU cores
@@ -19,11 +19,11 @@ http {
     # Keep client connections alive for 65 seconds
     keepalive_timeout 65;
 
-    # Optional: Compression settings
+    # Compression settings
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml+rss;
 
-    # Optional: Logging format
+    # Logging format
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
