--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,10 @@ services:
     container_name: frontend_service
     build:
       context: ./frontend/my-react-app
-      dockerfile: Dockerfile.dev # I need to chnag this to .frontend for production
+      dockerfile: Dockerfile.dev 
     ports:
       - "3000:3000"
-    volumes: # I need to delete this for production
+    volumes: 
       - ./frontend/my-react-app:/app
       - /app/node_modules
     networks:
@@ -62,8 +62,8 @@ services:
     networks:
       - xploitcraft_network
     volumes:
-    - ./apache/xploitcraft.conf:/usr/local/apache2/conf/extra/xploitcraft.conf
-    - ./apache/httpd.conf:/usr/local/apache2/conf/httpd.conf
+     - ./apache/apache_server.conf:/usr/local/apache2/conf/extra/apache_server.conf
+     - ./apache/httpd.conf:/usr/local/apache2/conf/httpd.conf
     restart: always
     
   nginx:
@@ -72,8 +72,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./sites-enabled/:/etc/nginx/sites-enabled/
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf          
+      - ./nginx/sites-enabled:/etc/nginx/sites-enabled
     networks:
       - xploitcraft_network
     depends_on:
