--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.4",
     "@csstools/normalize.css": "^12.1.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.0",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.8",
