--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -48,10 +48,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "cssnano": "^7.0.6",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.3",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
+    "strip-comments": "^2.0.1",
     "webpack-dev-server": "^5.2.0"
   }
 }
