--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 # Define the user
 user www-data;
 
-# Automatically adjust based on available CPU cores
+
 worker_processes auto;
 
 events {
@@ -9,21 +9,21 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;  # Define supported MIME types
-    include       /etc/nginx/sites-enabled/*;  # Include all enabled site configs
-    default_type  application/octet-stream;  # Default file type for unknown extensions
+    include       /etc/nginx/mime.types;  
+    include       /etc/nginx/sites-enabled/*;  
+    default_type  application/octet-stream;  
 
-    # Enable efficient file sending
+   
     sendfile        on;
 
-    # Keep client connections alive for 65 seconds
+   
     keepalive_timeout 65;
 
-    # Compression settings
+    
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml+rss;
 
-    # Logging format
+   
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
