--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -7,10 +7,12 @@
     "@csstools/normalize.css": "^12.1.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@formspree/react": "^2.5.1",
     "@mui/material": "^6.3.0",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.9",
+    "highlight.js": "^11.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
