--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -11,10 +11,13 @@
     "@mui/material": "^6.3.0",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "highlight.js": "^11.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
@@ -53,6 +56,7 @@
     "cssnano": "^7.0.6",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "strip-comments": "^2.0.1",
