--- a/nginx/sites-enabled/reverse_proxy.conf
+++ b/nginx/sites-enabled/reverse_proxy.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name proxyauthrequired.com www.proxyauthrequired.com;
+    server_name _;
 
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
