--- a/apache/apache_server.conf
+++ b/apache/apache_server.conf
@@ -2,22 +2,21 @@
     ServerName apache
     ServerAdmin webmaster@localhost
 
+
+    ProxyPassMatch ^/api/socket.io/(.*) ws://backend:5000/api/socket.io/$1
+    ProxyPassReverse ^/api/socket.io/(.*) ws://backend:5000/api/socket.io/$1
+
+
     ProxyPass /api/ http://backend:5000/
     ProxyPassReverse /api/ http://backend:5000/
-    
-    
+
+
     ProxyPass / http://frontend:3000/
     ProxyPassReverse / http://frontend:3000/
 
-    
     <Location /api/>
         Require all granted
     </Location>
-
-    ErrorLog /usr/local/apache2/logs/xploitcraft_error.log
+    
 </VirtualHost>
-
-
-
-
 
