--- a/apache/Dockerfile.apache
+++ b/apache/Dockerfile.apache
@@ -6,6 +6,7 @@ COPY httpd.conf /usr/local/apache2/conf/httpd.conf
 RUN sed -i '/#LoadModule unixd_module/s/^#//' /usr/local/apache2/conf/httpd.conf && \
     sed -i '/#LoadModule proxy_module/s/^#//' /usr/local/apache2/conf/httpd.conf && \
     sed -i '/#LoadModule proxy_http_module/s/^#//' /usr/local/apache2/conf/httpd.conf && \
+    sed -i '/#LoadModule proxy_wstunnel_module/s/^#//' /usr/local/apache2/conf/httpd.conf && \
     sed -i '/#LoadModule authz_core_module/s/^#//' /usr/local/apache2/conf/httpd.conf
 
 RUN mkdir -p /usr/local/apache2/logs && chmod -R 777 /usr/local/apache2/logs
