--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -10,6 +10,7 @@ LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule unixd_module modules/mod_unixd.so
+LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
 
 # Include conf/extra/httpd-autoindex.conf
 # Include conf/extra/httpd-dav.conf
