--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -23,6 +23,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.2",
     "react-window": "^1.8.11",
+    "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.171.0",
     "web-vitals": "^4.2.4"
