--- a/nginx/sites-enabled/reverse_proxy.conf
+++ b/nginx/sites-enabled/reverse_proxy.conf
@@ -9,22 +9,23 @@ server {
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     location / {
+
         proxy_pass http://apache:8080;
-        
+
+
         proxy_http_version 1.1;
-        proxy_set_header Connection "";
 
-        
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+
+
         proxy_request_buffering off;
-
-      
         proxy_buffering off;
         proxy_cache off;
-
-
         proxy_set_header X-Accel-Buffering "no";
 
-        # Standard pass-through headers
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
