--- a/nginx/sites-enabled/reverse_proxy.conf
+++ b/nginx/sites-enabled/reverse_proxy.conf
@@ -2,34 +2,38 @@ server {
     listen 80;
     listen [::]:80;
     server_name _;
-
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-    location / {
-
+    
+    # WebSocket configuration for socket.io
+    location /api/socket.io/ {
         proxy_pass http://apache:8080;
-
-
         proxy_http_version 1.1;
-
-
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
-
-
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    # Regular HTTP configuration for everything else (including streaming)
+    location / {
+        proxy_pass http://apache:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        
         proxy_request_buffering off;
         proxy_buffering off;
         proxy_cache off;
         proxy_set_header X-Accel-Buffering "no";
-
-
+        
+        # Standard pass-through headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
