--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
-openai==1.54.3
+openai[datalib]==1.54.3
 pydantic==2.9.2
 python-engineio==4.10.1
 python-socketio==5.11.4
