--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -5,12 +5,12 @@ ServerRoot "/usr/local/apache2"
 Listen 8080
 ServerName apache
 
-LoadModule mpm_event_module modules/mod_mpm_event.so
+LoadModule env_module modules/mod_env.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule unixd_module modules/mod_unixd.so
-LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
 
 # Include conf/extra/httpd-autoindex.conf
 # Include conf/extra/httpd-dav.conf
