--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -5,6 +5,10 @@ ServerRoot "/usr/local/apache2"
 Listen 8080
 ServerName apache
 
+# MPM (choose only 1)
+LoadModule mpm_event_module modules/mod_mpm_event.so
+
+# Other modules needed
 LoadModule env_module modules/mod_env.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
