--- a/apache/apache_server.conf
+++ b/apache/apache_server.conf
@@ -1,22 +1,19 @@
 <VirtualHost *:8080>
     ServerName apache
     ServerAdmin webmaster@localhost
-    
-    # WebSocket-specific configuration (no keep-alive settings)
+
+    ProxyPreserveHost On
+
     ProxyPassMatch ^/api/socket.io/(.*) ws://backend:5000/api/socket.io/$1
     ProxyPassReverse ^/api/socket.io/(.*) ws://backend:5000/api/socket.io/$1
-    
-    # Regular API routes with streaming settings
+
     <Location /api/>
-        SetEnv proxy-initial-not-pooled 1
-        SetEnv force-proxy-request-1.0 1
-        SetEnv proxy-nokeepalive 1
         ProxyPass http://backend:5000/
         ProxyPassReverse http://backend:5000/
         Require all granted
     </Location>
-    
-    # Frontend route
+
     ProxyPass / http://frontend:3000/
     ProxyPassReverse / http://frontend:3000/
+
 </VirtualHost>
