--- a/apache/apache_server.conf
+++ b/apache/apache_server.conf
@@ -2,18 +2,20 @@
     ServerName apache
     ServerAdmin webmaster@localhost
 
-    ProxyPreserveHost On
 
     ProxyPassMatch ^/api/socket.io/(.*) ws://backend:5000/api/socket.io/$1
     ProxyPassReverse ^/api/socket.io/(.*) ws://backend:5000/api/socket.io/$1
 
-    <Location /api/>
-        ProxyPass http://backend:5000/
-        ProxyPassReverse http://backend:5000/
-        Require all granted
-    </Location>
+
+    ProxyPass /api/ http://backend:5000/
+    ProxyPassReverse /api/ http://backend:5000/
+
 
     ProxyPass / http://frontend:3000/
     ProxyPassReverse / http://frontend:3000/
 
+    <Location /api/>
+        Require all granted
+    </Location>
+    
 </VirtualHost>
