--- a/apache/apache_server.conf
+++ b/apache/apache_server.conf
@@ -3,19 +3,23 @@
     ServerAdmin webmaster@localhost
 
 
+    ProxyRequests Off
+    ProxyPreserveHost On
+
+
     ProxyPassMatch ^/api/socket.io/(.*) ws://backend:5000/api/socket.io/$1
     ProxyPassReverse ^/api/socket.io/(.*) ws://backend:5000/api/socket.io/$1
 
 
-    ProxyPass /api/ http://backend:5000/
+    ProxyPass        /api/ http://backend:5000/ keepalive=On flushpackets=on
     ProxyPassReverse /api/ http://backend:5000/
 
 
-    ProxyPass / http://frontend:3000/
+    ProxyPass        / http://frontend:3000/
     ProxyPassReverse / http://frontend:3000/
 
     <Location /api/>
         Require all granted
     </Location>
-    
 </VirtualHost>
+
